correct styles of edit panel buttons on mobile

--- a/client/src/StyleSheets/AudioPlayer.module.css
+++ b/client/src/StyleSheets/AudioPlayer.module.css
@@ -551,6 +551,7 @@ input[type="range"]::-webkit-slider-thumb {
   font-size: .6rem;
   /* background-color: grey; */
   /* font-family: 'Courier New', Courier, monospace !important; */
+  color: var(--white-1);
 
 }
 
