--- a/client/src/StyleSheets/Logout.module.css
+++ b/client/src/StyleSheets/Logout.module.css
@@ -3,6 +3,7 @@
     position: absolute;
     top: 15px;
     right: 15px;
+    color: var(--tertiary);
 }
 
 .logout_button:hover {
