--- a/client/src/StyleSheets/ThemeEditor.module.css
+++ b/client/src/StyleSheets/ThemeEditor.module.css
@@ -16,6 +16,7 @@
     margin: 10px;
     font-size: .8rem;
     margin: 0px 5px 0px 5px;
+    color: var(--tertiary);
 }
 
 .toggled_on {
